# mapreduce_hw12

./: CMakeLists.txt  Doxyfile  mapper.cpp  mapreduce.sh  readme.md  reducer.cpp
.github/workflows/: release.yml
lib/: functions.cpp  functions.h
reducer/: main.cpp
